display: Split out rotation sanity checking

https://bugzilla.gnome.org/show_bug.cgi?id=731166